{
    "name": "Gameplay",
    "maps": [
        {
            "name": "Controls",
            "id": "5d41682f-9b01-4a2a-b2b4-34f8dc5505fc",
            "actions": [
                {
                    "name": "PlaceWall",
                    "type": "Button",
                    "id": "d237092b-0bd2-4c85-a6bc-8fa45fa62f43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceDestination",
                    "type": "Button",
                    "id": "911f3a91-8ed0-4e1b-a254-4dfe099f6dc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaserTurret",
                    "type": "Button",
                    "id": "921387df-0efb-4495-a2e6-d058c58c43f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MortarTurret",
                    "type": "Button",
                    "id": "e84cec73-4081-4739-84db-1594726fe448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceTurret",
                    "type": "Button",
                    "id": "c1af9fed-a499-4bd8-a797-ca3b6cfde325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleGrid",
                    "type": "Button",
                    "id": "e2b7654e-2772-41e0-b854-2f32bbb6147d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TogglePaths",
                    "type": "Button",
                    "id": "bf8078f1-8353-4e78-b3de-706547b0cd6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a19c92ff-7794-4b57-90b1-63a80fa5adf6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d55fbd59-2e6b-4484-af4b-566ff47d3cd8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceDestination",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2173a49-eaa8-48ee-a4d6-d24e03bec0a3",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaserTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3e12fb7-ba9c-4a8f-84c0-da3041f8dac5",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MortarTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "47984a92-f6ea-41ad-9ce3-42a9f080013d",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceTurret",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b4ae29c7-d467-4228-896b-0ccdb1f1d3bd",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceTurret",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "c4c872e7-224a-4436-b0c3-63d022f0ab2a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceTurret",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51aa9157-813e-4423-a56c-fdfd96f3febf",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleGrid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68f6aac5-e0c8-495c-bee4-93ab4996d0b5",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePaths",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}